--- a/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Inventario.form
+++ b/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Inventario.form
@@ -40,7 +40,7 @@
         </Property>
         <Property name="text" type="java.lang.String" value="  Materiales"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bold" size="16" style="1"/>
+          <Font name="Roboto Bold" size="15" style="1"/>
         </Property>
       </Properties>
       <Events>
@@ -48,7 +48,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="30" y="30" width="170" height="-1"/>
+          <AbsoluteConstraints x="30" y="20" width="170" height="40"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -76,7 +76,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="30" y="110" width="357" height="-1"/>
+          <AbsoluteConstraints x="30" y="90" width="357" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -90,7 +90,7 @@
         </Property>
         <Property name="text" type="java.lang.String" value="  Herramientas"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bold" size="16" style="1"/>
+          <Font name="Roboto Bold" size="15" style="1"/>
         </Property>
       </Properties>
       <Events>
@@ -98,7 +98,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="230" y="30" width="180" height="-1"/>
+          <AbsoluteConstraints x="230" y="20" width="180" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -113,7 +113,7 @@
         <Property name="text" type="java.lang.String" value="  Productos terminados"/>
         <Property name="toolTipText" type="java.lang.String" value=""/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bold" size="16" style="1"/>
+          <Font name="Roboto Bold" size="15" style="1"/>
         </Property>
       </Properties>
       <Events>
@@ -121,7 +121,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="440" y="30" width="250" height="-1"/>
+          <AbsoluteConstraints x="440" y="20" width="240" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -135,7 +135,7 @@
         </Property>
         <Property name="text" type="java.lang.String" value="  Movimientos"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Roboto Bold" size="16" style="1"/>
+          <Font name="Roboto Bold" size="15" style="1"/>
         </Property>
       </Properties>
       <Events>
@@ -143,7 +143,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="720" y="30" width="180" height="-1"/>
+          <AbsoluteConstraints x="710" y="20" width="170" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -165,19 +165,22 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="850" y="110" width="130" height="-1"/>
+          <AbsoluteConstraints x="870" y="90" width="110" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
     <Container class="javax.swing.JPanel" name="panelprinicpal">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="f7" green="e9" red="e4" type="rgb"/>
+        </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[1000, 490]"/>
         </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="20" y="170" width="-1" height="-1"/>
+          <AbsoluteConstraints x="30" y="140" width="950" height="520"/>
         </Constraint>
       </Constraints>
 
