--- a/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/CrearCliente.form
+++ b/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/CrearCliente.form
@@ -290,6 +290,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="f7" green="e9" red="e4" type="rgb"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="10" y="90" width="650" height="390"/>
