--- a/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Inventario.form
+++ b/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Inventario.form
@@ -10,7 +10,7 @@
       <Dimension value="[32767, 32]"/>
     </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[1015, 690]"/>
+      <Dimension value="[1290, 730]"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -185,6 +185,19 @@
       </Constraints>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+      <SubComponents>
+        <Container class="javax.swing.JScrollPane" name="jScrollPane1">
+          <AuxValues>
+            <AuxValue name="autoScrollPane" type="java.lang.Boolean" value="true"/>
+          </AuxValues>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+          <SubComponents>
+            <Component class="javax.swing.JEditorPane" name="jEditorPane1">
+            </Component>
+          </SubComponents>
+        </Container>
+      </SubComponents>
     </Container>
   </SubComponents>
 </Form>
