--- a/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Contrasena.form
+++ b/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Contrasena.form
@@ -65,7 +65,7 @@
                   </Border>
                 </Property>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Crosshair Cursor"/>
+                  <Color id="Hand Cursor"/>
                 </Property>
               </Properties>
               <Events>
