se agregoo codigo olvidar contra

--- a/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Contrasena.form
+++ b/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Contrasena.form
@@ -165,6 +165,15 @@
                 </Constraint>
               </Constraints>
             </Component>
+            <Container class="javax.swing.JSplitPane" name="jSplitPane1">
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+                  <AbsoluteConstraints x="270" y="120" width="-1" height="-1"/>
+                </Constraint>
+              </Constraints>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.support.JSplitPaneSupportLayout"/>
+            </Container>
           </SubComponents>
         </Container>
       </SubComponents>
