--- a/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/proveedores.form
+++ b/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/proveedores.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -92,12 +92,48 @@
                   </Border>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="6" rowCount="0">
+                  <Table columnCount="6" rowCount="11">
                     <Column editable="true" title="#" type="java.lang.Object"/>
-                    <Column editable="true" title="ID" type="java.lang.Object"/>
-                    <Column editable="true" title="Nombre" type="java.lang.Object"/>
+                    <Column editable="true" title="ID" type="java.lang.Object">
+                      <Data value="42354"/>
+                      <Data value="24565"/>
+                      <Data value="65786"/>
+                      <Data value="98057"/>
+                      <Data value="76954"/>
+                      <Data value="85678"/>
+                      <Data value="59776"/>
+                      <Data value="78099"/>
+                      <Data value="45667"/>
+                      <Data value="78955"/>
+                      <Data value="09866"/>
+                    </Column>
+                    <Column editable="true" title="Nombre" type="java.lang.Object">
+                      <Data value="juan"/>
+                      <Data value="Daniel"/>
+                      <Data value="Brayan"/>
+                      <Data value="Esteban "/>
+                      <Data value="Mariana "/>
+                      <Data value="Maria"/>
+                      <Data value="David"/>
+                      <Data value="Karen"/>
+                      <Data value="Pilar"/>
+                      <Data value="Alejandro"/>
+                      <Data value="Yuri"/>
+                    </Column>
                     <Column editable="true" title="Correo" type="java.lang.Object"/>
-                    <Column editable="true" title="Telefono" type="java.lang.Object"/>
+                    <Column editable="true" title="Telefono" type="java.lang.Object">
+                      <Data value="4314214"/>
+                      <Data value="1324234"/>
+                      <Data value="1234235"/>
+                      <Data value="4568456"/>
+                      <Data value="4567356"/>
+                      <Data value="7658335"/>
+                      <Data value="5675643"/>
+                      <Data value="5467568"/>
+                      <Data value="6474567"/>
+                      <Data value="4574569"/>
+                      <Data value="4568763"/>
+                    </Column>
                     <Column editable="true" title="Direccion" type="java.lang.Object"/>
                   </Table>
                 </Property>
